; ModuleID = '/home/carl/AnghaBench/netdata/web/api/tests/extr_web_api.c___wrap_config_get.c'
source_filename = "/home/carl/AnghaBench/netdata/web/api/tests/extr_web_api.c___wrap_config_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config = type { i32 }

@CONFIG_SECTION_WEB = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [16 x i8] c"web files owner\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"netdata\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"UNKNOWN FIX ME\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @__wrap_config_get(%struct.config* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.config*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store %struct.config* %0, %struct.config** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load i8*, i8** @CONFIG_SECTION_WEB, align 8
  %12 = call i32 @strcmp(i8* %10, i8* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %4
  %15 = load i8*, i8** %8, align 8
  %16 = call i32 @strcmp(i8* %15, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %14
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %5, align 8
  br label %20

19:                                               ; preds = %14, %4
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i8** %5, align 8
  br label %20

20:                                               ; preds = %19, %18
  %21 = load i8*, i8** %5, align 8
  ret i8* %21
}

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
